Added link to github

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                   Sugestie i uwagi proszę kierować na  <br>
                   <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
             </p>
+            <p>
+                  Github: <br>
+                  <a href="https://github.com/MadkaGatka/MadkaGatka.github.io" target="_blank">github.com/MadkaGatka</a>
+            </p>
       </footer>
       <script src="scripts/script.js"></script>
 </body>
