Fixed copy, added share btn
Fixed copyToClipboard on iOS, and added share button for facebook

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <title>MadkaGatka - Pisz z madką jak równy z równym 👊</title>
 </head>
 <body>
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
       <section class="container">
             <div class="description">
                   Pisz z madką jak równy z równym 👊
@@ -37,7 +39,10 @@
             <textarea class="translated" id="translated" cols="90" rows="10" spellcheck="false"></textarea>
             <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
       </section>
-      <footer class="footer share">
+      <footer class="footer">
+            
+            <p class="fb-share-button" data-href="https://madkagatka.github.io/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmadkagatka.github.io%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Udostępnij</a></p>
+
             <p>
                   Sugestie i uwagi proszę kierować na  <br>
                   <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
