Added description and fixed thumb bg for mozilla

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <link href="css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>MadkaGatka - Pisz z madką jak równy z równym 👊</title>
+      <meta name="description" content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny.">
 </head>
 <body>
       <div id="fb-root"></div>
