--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
       <link href="css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>MadkaGatka - Pisz z madką jak równy z równym 👊</title>
