--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             gtag('config', 'UA-145438847-1');
       </script>
       <meta charset="UTF-8">
+      <meta property="og:title" content="MadkaGatka - Pisz z madką jak równy z równym 👊" />
+      <meta property="og:description" content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny." />
+      <meta property="og:type" content="Website" />
+      <meta property="og:url" content="https://madkagatka.github.io/" />
+      <!-- <meta property="og:image" content="" /> -->
+      
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
