Change lvl help
Added arrow showing range input to change lvl

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             gtag('js', new Date());
             gtag('config', 'UA-145438847-1');
       </script>
+      
       <meta charset="UTF-8">
       <meta property="og:title" content="MadkaGatka - Pisz z madką jak równy z równym 👊" />
       <meta property="og:description" content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny." />
@@ -39,6 +40,10 @@
                         <div class="lvl" id="lvl"> latwy </div>
                   </div>
                   <input type="range" id="diff_lvl" name="lvl" min="0" max="4" class="diff_lvl" value="0">
+                  <div class="change_level_info">
+                       <div class="change_level_info_text">Zmień poziom trudności</div>
+                       <img src="img/arrow.png" alt="Arrow" height="30px" class="info_arrow"> 
+                  </div>
             </div>
             <textarea name="translate" id="translate" cols="90" rows="10" class="translate" spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić. </textarea>
             <button class="translate__btn btn" id="translate__btn">
@@ -58,8 +63,10 @@
             <p>
                   Github: <br>
                   <a href="https://github.com/MadkaGatka/MadkaGatka.github.io" target="_blank">github.com/MadkaGatka</a>
+                  
             </p>
       </footer>
       <script src="scripts/script.js"></script>
+      <script src="https://use.fontawesome.com/7b0f8a4daa.js"></script>
 </body>
 </html>
