Added twitter og tags

--- a/index.html
+++ b/index.html
@@ -14,21 +14,33 @@
       </script>
 
       <meta charset="UTF-8">
-      <meta property="og:title" content="MadkaGatka - Pisz z madką jak równy z równym 👊" />
-      <meta property="og:description"
-            content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny." />
-      <meta property="og:type" content="Website" />
-      <meta property="og:url" content="https://madkagatka.github.io/" />
-      <meta property="og:image" content="https://madkagatka.github.io/img/mg.webp" />
-
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
       <link href="css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
+      <!-- Primary Meta Tags -->
       <title>MadkaGatka - Pisz z madką jak równy z równym 👊</title>
+      <meta name="title" content="MadkaGatka - Pisz z madką jak równy z równym 👊">
       <meta name="description"
             content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny.">
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://madkagatka.github.io/">
+      <meta property="og:title" content="MadkaGatka - Pisz z madką jak równy z równym 👊">
+      <meta property="og:description"
+            content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny.">
+      <meta property="og:image" content="http://madkagatka.github.io/img/mg.webp">
+
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image">
+      <meta property="twitter:url" content="https://madkagatka.github.io/">
+      <meta property="twitter:title" content="MadkaGatka - Pisz z madką jak równy z równym 👊">
+      <meta property="twitter:description"
+            content="Zamień bezbłędne zdania, pełne interpunkcji i sensu w papkę nibysłów którymi porozumiewają się miedzy sobą typowe madki, janusze i karyny.">
+      <meta property="twitter:image" content="http://madkagatka.github.io/img/mg.webp">
 </head>
 
 <body>
