Added like button

--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
             <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
       </section>
       <footer class="footer">
+            <p>
+                  <div class="fb-like" data-href="https://madkagatka.github.io/" data-width=""
+                        data-layout="button_count" data-action="like" data-size="large" data-show-faces="false"
+                        data-share="false"></div> &nbsp &nbsp &nbsp
 
-            <p class="fb-share-button" data-href="https://madkagatka.github.io/" data-layout="button_count"
-                  data-size="large"><a target="_blank"
-                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmadkagatka.github.io%2F&amp;src=sdkpreparse"
-                        class="fb-xfbml-parse-ignore">Udostępnij</a></p>
-
+                  <div class="fb-share-button" data-href="https://madkagatka.github.io/" data-layout="button_count"
+                        data-size="large"><a target="_blank"
+                              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmadkagatka.github.io%2F&amp;src=sdkpreparse"
+                              class="fb-xfbml-parse-ignore">Udostępnij</a></div>
+            </p>
             <p>
                   Sugestie i uwagi proszę kierować na <br>
                   <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
