Changed helper text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   </div>
                   <input type="range" id="diff_lvl" name="lvl" min="0" max="4" class="diff_lvl" value="0">
                   <div class="change_level_info">
-                        <div class="change_level_info_text">Zmień poziom trudności</div>
+                        <div class="change_level_info_text">Zmień poziom zmadkowienia</div>
                         <img src="img/arrow.png" alt="Arrow" height="30px" class="info_arrow">
                   </div>
             </div>
