--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
             </p>
       </footer>
-      <script src="scripts/script.js"></script>
-      <script src="https://use.fontawesome.com/7b0f8a4daa.js"></script>
+      <script async src="scripts/script.js"></script>
+      <script async src="https://use.fontawesome.com/7b0f8a4daa.js"></script>
 </body>
 
 </html>
