Added signature at the end of translated text

--- a/index.html
+++ b/index.html
@@ -64,14 +64,18 @@
             </div>
             <textarea name="translate" id="translate" cols="90" rows="10" class="translate"
                   spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić. </textarea>
-            <button class="translate__btn btn" id="translate__btn">
-                  po madkowemu
-            </button>
+            <button class="translate__btn btn" id="translate__btn">po madkowemu</button>
             <textarea class="translated" id="translated" cols="90" rows="10" spellcheck="false"></textarea>
-            <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
+            
+            <div class="made__with__love__container">
+                  <div class="cheers">
+                        with ❤ madkagatka
+                  </div>
+                  <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
+            </div>
       </section>
       <footer class="footer">
-            <p>
+            <div class="share__container">
                   <div class="fb-like" data-href="https://madkagatka.github.io/" data-width=""
                         data-layout="button_count" data-action="like" data-size="large" data-show-faces="false"
                         data-share="false"></div> &nbsp &nbsp &nbsp
@@ -80,7 +84,7 @@
                         data-size="large"><a target="_blank"
                               href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmadkagatka.github.io%2F&amp;src=sdkpreparse"
                               class="fb-xfbml-parse-ignore">Udostępnij</a></div>
-            </p>
+            </div>
             <p>
                   Sugestie i uwagi proszę kierować na <br>
                   <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
