--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       </script>
 
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
       <link href="css/style.css" rel="stylesheet">
