--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       </script>
 
       <meta charset="UTF-8">
-      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -70,7 +69,7 @@
             
             <div class="made__with__love__container">
                   <div class="cheers">
-                        with ❤ madkagatka
+                        with <span class="heart">❤</span> madkagatka
                   </div>
                   <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
             </div>
