review of accessibility

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
       <script async defer crossorigin="anonymous"
             src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
       <section class="container">
-            <div class="description">
+            <h1 class="description">
                   Pisz z madką jak równy z równym 👊
-            </div>
+            </h1>
             <div class="difficulty__lvl">
                   <div class="lvl__container">
                         <label for="lvl"> &bull; Poziom: &nbsp; </label>
                         <div class="lvl" id="lvl"> latwy </div>
                   </div>
-                  <input type="range" id="diff_lvl" name="lvl" min="0" max="4" class="diff_lvl" value="0">
-                  <div class="change_level_info">
+                  <input type="range" id="diff_lvl" min="0" max="4" class="diff_lvl" value="0">
+                  <label for="diff_lvl" class="change_level_info">
                         <div class="change_level_info_text">Zmień poziom zmadkowienia</div>
                         <img src="img/arrow.png" alt="Arrow" height="30px" class="info_arrow">
-                  </div>
+                  </label>
             </div>
             <textarea name="translate" id="translate" cols="90" rows="10" class="translate"
                   spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić. </textarea>
