--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+      <link href="css/reset.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
@@ -51,17 +52,17 @@
             <h1 class="description">
                   Pisz z madką jak równy z równym 👊
             </h1>
-            <div class="difficulty__lvl">
+            <h2 class="difficulty__lvl">
                   <div class="lvl__container">
-                        <label for="lvl"> &bull; Poziom: &nbsp; </label>
-                        <div class="lvl" id="lvl"> latwy </div>
+                        <span for="lvl"> &bull; Poziom: &nbsp; </span>
+                        <span class="lvl" id="lvl"> latwy </span>
                   </div>
                   <input type="range" id="diff_lvl" min="0" max="4" class="diff_lvl" value="0">
                   <label for="diff_lvl" class="change_level_info">
                         <div class="change_level_info_text">Zmień poziom zmadkowienia</div>
                         <img src="img/arrow.png" alt="Arrow" height="30px" class="info_arrow">
                   </label>
-            </div>
+            </h2>
             <textarea name="translate" id="translate" cols="90" rows="10" class="translate"
                   spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić. </textarea>
             <button class="translate__btn btn" id="translate__btn">po madkowemu</button>
