changed method downloading font

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                               href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmadkagatka.github.io%2F&amp;src=sdkpreparse"
                               class="fb-xfbml-parse-ignore">Udostępnij</a></div>
             </div>
+            
+            <div class="fb-comments" data-href="https://madkagatka.github.io/" data-width="" data-numposts="5"></div>
+            
             <p>
                   Sugestie i uwagi proszę kierować na <br>
                   <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
