--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                               class="fb-xfbml-parse-ignore">Udostępnij</a></div>
             </div>
             
-            <div class="fb-comments" data-href="https://madkagatka.github.io/" data-width="" data-numposts="5"></div>
+            <div class="fb-comments" data-href="https://madkagatka.github.io/" data-width="100%" data-numposts="5"></div>
             
             <p>
                   Sugestie i uwagi proszę kierować na <br>
