Added facebook cookies info

--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
             <h1 class="description">
                   Pisz z madką jak równy z równym 👊
             </h1>
+            <div class="modal__cookies">
+                  <span>Facebook używa cookiesów - <a href="https://www.facebook.com/policy/cookies/" target="_blank">regulamin</a></span><button class="close__modal">🗙</button>
+            </div>
             <h2 class="difficulty__lvl">
                   <div class="lvl__container">
-                        <span for="lvl"> &bull; Poziom: &nbsp; </span>
+                        <span for="lvl"> &bull; Poz.:</span>
                         <span class="lvl" id="lvl"> latwy </span>
                   </div>
                   <input type="range" id="diff_lvl" min="0" max="4" class="diff_lvl" value="0">
@@ -93,7 +96,6 @@
             </p>
       </footer>
       <script async src="scripts/script.js"></script>
-      <script async src="https://use.fontawesome.com/7b0f8a4daa.js"></script>
 </body>
 
 </html>
