Added funniest translations section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <link href="css/style.css" rel="stylesheet">
 
       <!-- Primary Meta Tags -->
+      <meta name="author" content="Rafi">
       <title>MadkaGatka - Pisz z madką jak równy z równym 👊</title>
       <meta name="title" content="MadkaGatka - Pisz z madką jak równy z równym 👊">
       <meta name="description"
@@ -85,6 +86,10 @@
                   <button class="copyToClipboard btn" id="copyToClipboard">kopiuj</button>
             </div>
       </section>
+      <secton class="translations__container">
+            <h2 class="translations__header">majzabawnijsze tumaczenia</h2>
+            <div class="funniest__translations "></div>
+      </secton>
       <footer class="footer">
             <div class="share__container">
                   <div class="fb-like" data-href="https://madkagatka.github.io/" data-width=""
@@ -97,7 +102,7 @@
                               class="fb-xfbml-parse-ignore">Udostępnij</a></div>
             </div>
             <p>
-               Kontakt: <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
+                  Kontakt: <a href="mailto:madka.gatka@wp.pl">madka.gatka@wp.pl</a>
             </p>
       </footer>
       <script async src="scripts/script.js"></script>
