Moved ! to lover lvl

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </h2>
             <label for="translate" class="visuallyhidden">Wpisz tekst do przetłumaczenia:</label>
             <textarea name="translate" id="translate" cols="90" rows="10" class="translate"
-                  spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić. </textarea>
+                  spellcheck="true">Potrzebne są krzesła bo nie ma na czym usiąść, a dzieci też by chciały się kiedykolwiek pobawić!</textarea>
             <div class="btns__container">
                   <button class="clear__btn btn" id="clearTranslateBtn">wyczyść</button>
                   <button class="translate__btn btn" id="translate__btn">po madkowemu</button>
